refactor (Query): Алгоритм добавления динамических правил.
Переработана логика работы с динамическими правилами.
Выполнена настройка кэширования данных.